@@ -7,6 +7,8 @@ Version 1.0:
 	Added SDL_VIDEO_ALLOW_SCREENSAVER to override SDL's disabling
 	of the screensaver on Mac OS X and X11.
 
+	Added SDL_BUTTON_WHEELLEFT (6) and SDL_BUTTON_WHEELRIGHT (7)
+
 1.2.10:
 	If SDL_OpenAudio() is passed zero for the desired format
 	fields, the following environment variables will be used
